fixed vertical alignment of image and text
vertical-align: middle;

--- a/css/main-position.css
+++ b/css/main-position.css
@@ -22,12 +22,12 @@ html {
 #navigation {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1em;
+  padding: 0.5em 1em 0 1em;
   display: flex;
   display: -webkit-flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
-  /*height: 60px;*/
+
 }
 
 #navigation .nav-pages {
@@ -35,8 +35,14 @@ html {
   text-align: right;
 }
 
+.nav-title div {
+  display: inline-block;
+}
+
 #logo {
-  width: 1.8em;
+  width: 2em;
+  vertical-align: middle;
+
 }
 
 
@@ -57,7 +63,31 @@ input[type=checkbox]:checked ~ #show-pages {
 
 /*Arrangement on larger displays*/
 
-
+@media screen and (min-width: 50em) {
+  #show-pages {
+    display: inline-block;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  #navigation .nav-pages {
+    margin-left: 0;
+    flex-grow: 1;
+    text-align: left;
+  }
+  #show-pages {
+    width: 100%;
+    margin-left: 1em;
+  }
+  #show-pages li {
+    display: inline-block;
+    padding: 0 0.5em;
+  }
+  #navigation .nav-right {
+    float: right;
+    text-align: right;
+  }
+}
 
 /*----------------------- Header ------------------------------ */
 
